--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,3 +115,14 @@ color:#000;
   justify-content:flex-end;
   text-align: center;
 }
+
+.adminMenu{
+width:100%;
+  display:flex;
+}
+
+.chapterEdit{
+height:200px;
+
+  overflow: scroll;
+}
