--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -210,7 +210,10 @@
   .sidebar-wrapper .sidebar-menu {
     padding-bottom: 10px;
   }
-  
+  .header-menu h3{
+text-align: center;
+font-family:Neucha;
+  }
   .sidebar-wrapper .sidebar-menu .header-menu span {
     font-weight: bold;
     font-size: 14px;
@@ -350,7 +353,10 @@
   }
   
   /*--------------------------page-content-----------------------------*/
-  
+  .page-content h2{
+    font-family:Neucha;
+
+  }
   .page-wrapper .page-content {
     display: inline-block;
     width: 100%;
@@ -480,6 +486,7 @@
   
   .chiller-theme .sidebar-wrapper .sidebar-menu .header-menu span {
       color: #6c7b88;
+
   }
   
   .chiller-theme .sidebar-footer {
@@ -505,5 +512,16 @@
     text-align: center;
     margin:auto;
   }
+#nbSignalNumber{
+  margin: auto;
+  width: 2rem;
+  text-align: center;
+  border-radius: 50%;
+  color: rgb(221, 66, 87);
+  border :1px solid rgb(221, 66, 87);
 
-  
+}
+#commentsTable th,#commentsTable tr,#commentsTable td{
+  border:1px solid black;
+  text-align: center;
+}
