--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,7 +70,6 @@ background-color: lightgrey;
     font-size:2.5em;
 }
 
-
 #mentions{
     text-align:center;
     margin: 5rem 5rem;
@@ -92,6 +91,10 @@ background-color: lightgrey;
     right:25%;
     z-index: 1;
     display: none;
+}
+.modal-footer {
+  display: flex;
+  justify-content: center;
 }
 .editor{
   ;
@@ -159,4 +162,9 @@ width:100%;
 margin:2rem 0;
 border:5px solid black;
 padding:1.5em;
+}
+.comArea{
+width:100%;
+height:350px;
+padding:25px;
 }
