--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,6 +142,9 @@ width:100%;
   float:left;
   color:#000;
 }
+#titleChap p {
+  padding: 0 5%;
+}
 
 #menuAdmin{
   border:1px solid black;
@@ -167,4 +170,16 @@ padding:1.5em;
 width:100%;
 height:350px;
 padding:25px;
+}
+
+.censored h4{
+  color:red;
+  font-family: sans-serif;
+  text-align:center;
+}
+
+.comment{
+  padding: 0.75%;
+  font-size: 1em;
+  font-family: sans-serif;
 }
