--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,3 @@
-/*--------------------------------------------------------------*/
-/*CSS perso */
-/*--------------------------------------------------------------*/
-/*--------------------------------------------------------------*/
 .news{
     border: 1px solid lightgray;
     padding: 1.5%;
@@ -13,18 +9,21 @@
   text-transform: uppercase;
   color: #000;
 }
+
+.news em{
+  color: green;
+  text-transform:lowercase;
+  font-size: 0.5em;
+}
+
+
 #chapters{
   background-color: #fff;
   border: 2px solid grey;
   padding: 10px;
   margin:20px 0 ;
 }
-#chapters h3{
-color:#000;
-}
-#chapter_main:hover{
-background-color: lightgrey;
-}
+
 #chapter_main{
   border: 2px solid grey;
   margin:20px 0 ;
@@ -34,14 +33,18 @@ background-color: lightgrey;
 
 }
 
-.news em{
-  color: green;
-  text-transform:lowercase;
-  font-size: 0.5em;
+#chapters h3{
+color:#000;
+}
+
+#chapter_main:hover{
+background-color: lightgrey;
 }
 
 
-        @keyframes grow {
+
+
+@keyframes grow {
     0% {
             -webkit-transform: scale(11);
         -ms-transform: scale(1);
@@ -55,9 +58,8 @@ background-color: lightgrey;
 
 }
 
-
 .error p{
-    color: red;
+  color: red;
   text-align: center;
 }
 .error h1 {
@@ -65,6 +67,8 @@ background-color: lightgrey;
   color: red;
   text-align: center;
 }
+
+
 
 .lead{
     font-size:2.5em;
@@ -74,8 +78,9 @@ background-color: lightgrey;
     text-align:center;
     margin: 5rem 5rem;
     color:#000;
-}#mentions h1{
+}
 
+#mentions h1{
     color:#000;
 }
 
@@ -96,9 +101,7 @@ background-color: lightgrey;
   display: flex;
   justify-content: center;
 }
-.editor{
-  ;
-}
+
 .modifArea{
    width:100%;
     height:150px;
@@ -109,12 +112,10 @@ background-color: lightgrey;
   height:auto;
 }
 
-#navbar{
-  
-}
+
 
 #login{
-      display: flex;
+    display: flex;
     justify-content: center;
     margin: 30px;
 }
@@ -124,48 +125,7 @@ background-color: lightgrey;
   text-align: center;
 }
 
-.adminMenu{
-width:100%;
-  display:flex;
-}
 
-.chapterEdit p:nth-child(4){
-  height:100px;
-  overflow: scroll;
-}
-
-#titleChap h2::first-letter, #chapter_main::first-letter {
-  font-family: "Cabin Sketch", cursive;
-  font-size:2.5em;
-  text-transform: uppercase;
-  padding-right:0.2em;
-  float:left;
-  color:#000;
-}
-#titleChap p {
-  padding: 0 5%;
-}
-
-#menuAdmin{
-  border:1px solid black;
-  margin:auto;
-  display: flex;
-  justify-content: space-around;
-}
-#menuAdmin a{
-  color:#fff;
-}
-#chapterModifPopup{
-  display:none;
-  position: absolute;
-  top: 20.5rem;
-  margin:auto;
-}
-.editer{
-margin:2rem 0;
-border:5px solid black;
-padding:1.5em;
-}
 .comArea{
 width:100%;
 height:350px;
