--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -577,6 +577,10 @@ justify-content: space-around;
   overflow: scroll;
 }
 
+#titleChap{
+    box-shadow: 5px 5px 5px 2px rgba(0, 0, 255, .2);
+
+}
 
 
 #titleChap p {
