--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,12 +24,14 @@
   margin:20px 0 ;
 }
 
+
+
 #chapter_main{
   border: 2px solid grey;
   margin:20px 0 ;
   padding: 10px;
-  overflow: hidden;
-  height: 250px;
+  overflow:hidden;
+  height: 200px;
 
 }
 
@@ -67,7 +69,10 @@ background-color: lightgrey;
   color: red;
   text-align: center;
 }
+#navbarColor0{
+  box-shadow: 5px 5px 5px 2px rgba(0, 0, 255, .2);
 
+}
 
 
 .lead{
